--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -7,6 +7,6 @@
     <gradient
         android:type="linear"
         android:angle="45"
-        android:startColor="@color/blue_soft"
+        android:startColor="#3F51B5"
         android:endColor="@color/blue_soft"/>
 </shape>
