--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -64,4 +64,16 @@
         tools:text="082112966360"
         android:layout_marginTop="8dp"/>
 
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+       <ProgressBar
+           android:id="@+id/progressbar"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_centerHorizontal="true"
+           android:layout_centerVertical="true" />
+   </RelativeLayout>
+
 </LinearLayout>
