--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,30 +50,33 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clipToPadding="false">
+        android:clipToPadding="false"
+        android:padding="@dimen/root_view_padding">
 
         <View
             android:id="@+id/indicator"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@drawable/gradient_bg"/>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="45dp"
             android:background="@drawable/tab_bg"
             app:tabGravity="fill"
             app:tabMode="fixed"
             app:tabSelectedTextColor="#ffffff"
             app:tabIndicatorColor="@null"
-            app:tabRippleColor="@null"/>
+            app:tabRippleColor="@null"
+            app:tabIndicatorHeight="0dp"/>
     </FrameLayout>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/root_view_padding"/>
 
 
 </LinearLayout>
