--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,22 +101,28 @@
             android:visibility="invisible" />
 
 
-        <com.google.android.material.progressindicator.LinearProgressIndicator
-            android:id="@+id/progress_sign_in"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            android:indeterminate="true" />
+            android:layout_height="wrap_content">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_login_sign_in"
-            android:layout_width="@dimen/button_width"
-            android:layout_height="wrap_content"
-            app:cornerRadius="25dp"
-            android:layout_gravity="center"
-            android:text="@string/txt_btn_sign_in"
-            android:textAllCaps="false"
-            android:enabled="false" />
+            <ProgressBar
+                android:id="@+id/progress_in_signIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:visibility="invisible"
+                android:indeterminate="true" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_login_signIn"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Sign In"
+                app:cornerRadius="@dimen/button_radius"
+                android:textAllCaps="false"
+                android:enabled="false" />
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
