--- a/app/src/main/res/layout/item_all_concert.xml
+++ b/app/src/main/res/layout/item_all_concert.xml
@@ -27,7 +27,7 @@
 
     <TextView
         android:id="@+id/item_tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="Harry Styles"
         android:textSize="24sp"
