--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:padding="@dimen/root_view_padding"
-    tools:context=".view.main.fragment.AccountFragment">
+    android:padding="16dp"
+    tools:context="view.main.fragment.AccountFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -15,43 +14,38 @@
         app:subtitle="Sub"
         app:title="AndroidlyToolbar">
 
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:text="Profile"
-                android:textSize="24sp"
-                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/btn_logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
                 android:src="@drawable/icons8_logout_25"
+                android:layout_alignParentEnd="true"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?attr/selectableItemBackground"/>
-
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
    <RelativeLayout
-       android:layout_width="65dp"
-       android:layout_height="65dp">
+       android:layout_width="100dp"
+       android:layout_height="100dp"
+       android:layout_gravity="center_horizontal">
 
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
-           android:layout_width="65dp"
-           android:layout_height="65dp"
-           tools:src="@drawable/profile_xample"
-           app:civ_border_width="1dp"
-           app:civ_border_color="#FF000000"/>
+           android:layout_width="100dp"
+           android:layout_height="100dp"
+           android:src="@drawable/profile_xample"
+           android:layout_centerHorizontal="true"
+           android:layout_centerVertical="true"
+           android:layout_marginBottom="16dp"
+           app:civ_border_color="@color/gray"
+           app:civ_border_width="1dp"/>
 
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_choose_image"
@@ -59,37 +53,88 @@
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_camera_24"
            android:layout_alignParentEnd="true"
-           android:layout_alignParentBottom="true"
-           android:clickable="true"
-           android:focusable="true"
-           android:foreground="?selectableItemBackground"/>
+           android:layout_alignParentBottom="true"/>
    </RelativeLayout>
 
     <TextView
         android:id="@+id/profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Akhmad Fauzi"
-        android:layout_marginTop="8dp"
-        android:textStyle="bold"/>
+        android:text="Nama Lengkap"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="4dp" />
 
     <TextView
         android:id="@+id/profile_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="082112966360"
-        android:layout_marginTop="8dp"/>
+        android:text="Phone"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="4dp" />
 
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/bio_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tentang Saya"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp" />
 
-       <ProgressBar
-           android:id="@+id/progressbar"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_centerHorizontal="true"
-           android:layout_centerVertical="true" />
-   </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#BDBDBD"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/followers_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0 Followers"
+            android:textSize="16sp"
+            android:layout_weight="1"
+            android:gravity="center" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="#BDBDBD" />
+
+        <TextView
+            android:id="@+id/following_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0 Following"
+            android:textSize="16sp"
+            android:layout_weight="1"
+            android:gravity="center"/>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+    </RelativeLayout>
 </LinearLayout>
