--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,31 +18,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+          <ImageView
+              android:id="@+id/btn_search"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:src="@drawable/icons8_search__1_"
+              android:clickable="true"
+              android:focusable="true"
+              android:foreground="?actionBarItemBackground"/>
+
             <ImageView
                 android:id="@+id/iv_loc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icons8_location_24"
+                android:src="@drawable/icons8_location"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"/>
 
             <TextView
+                android:id="@+id/tv_location_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Location"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:layout_toEndOf="@id/iv_loc"/>
-
-            <ImageView
-                android:id="@+id/btn_logout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/icons8_logout_25"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?attr/selectableItemBackground"/>
+                android:textSize="16sp"
+                android:layout_toStartOf="@id/iv_loc"
+                android:layout_centerVertical="true"/>
 
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
