Get Current Location And Create Search View to concert

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -98,6 +98,31 @@
             android:textColor="@color/pink_soft"
             android:visibility="invisible" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose Gender"
+            android:layout_gravity="start"/>
+        <RadioGroup
+            android:id="@+id/enableRadioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rb_pria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pria"
+                android:checked="true"/>
+
+            <RadioButton
+                android:id="@+id/rb_wanita"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Wanita"/>
+        </RadioGroup>
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/outlinedTextFieldEmail"
@@ -226,6 +251,7 @@
             android:textSize="12sp"
             android:textColor="@color/pink_soft"
             android:visibility="invisible" />
+
 
         <RelativeLayout
             android:layout_width="match_parent"
