--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="25dp"/>
     <gradient
         android:type="linear"
         android:angle="45"
         android:startColor="#3F51B5"
+        android:centerColor="#00BCD4"
         android:endColor="@color/blue_soft"/>
 </shape>
