--- a/app/src/main/res/layout/fragment_search_concert.xml
+++ b/app/src/main/res/layout/fragment_search_concert.xml
@@ -18,7 +18,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search Concert"
+            android:hint="Search Artist Name"
             android:layout_marginEnd="16dp"
             android:layout_toStartOf="@id/btn_search"
             app:boxCornerRadiusBottomEnd="20dp"
