Create Mapbox Camera

--- a/app/src/main/res/layout/activity_concert_detailctivity.xml
+++ b/app/src/main/res/layout/activity_concert_detailctivity.xml
@@ -125,6 +125,15 @@
                 android:layout_marginTop="8dp"
                 android:textColor="@color/blue_soft"/>
 
+            <com.mapbox.mapboxsdk.maps.MapView
+                android:id="@+id/mapView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                mapbox:mapbox_cameraTargetLat="40.7128"
+                mapbox:mapbox_cameraTargetLng="-74.0060"
+                mapbox:mapbox_cameraZoom="9.0"
+                />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
