--- a/app/src/main/res/layout/fragment_ticket.xml
+++ b/app/src/main/res/layout/fragment_ticket.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.mapbox.mapboxsdk.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-android:id="@+id/mapView"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-mapbox:mapbox_cameraTargetLat="40.7128"
-mapbox:mapbox_cameraTargetLng="-74.0060"
-mapbox:mapbox_cameraZoom="9.0"
-    />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_img_gradient"
+    tools:context=".view.main.fragment.TicketFragment">
+
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Ticket Fragment" />
+
+</FrameLayout>
