--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,16 +25,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ImageView
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_search"
+                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_search_24"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_centerVertical="true"
-                    android:foreground="?actionBarItemBackground"
-                    app:tint="@color/white" />
+                    android:minWidth="0dp"
+                    android:padding="10dp"
+                    app:icon="@drawable/ic_baseline_search_24"
+                    app:iconGravity="textStart"
+                    app:iconPadding="0dp"
+                    app:iconTint="@color/white"
+                    app:strokeColor="@color/transparent" />
 
                 <ImageView
                     android:id="@+id/iv_loc"
