--- a/app/src/main/res/layout/fragment_search_concert.xml
+++ b/app/src/main/res/layout/fragment_search_concert.xml
@@ -11,7 +11,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="@dimen/root_view_padding">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_search_concert"
@@ -24,25 +25,31 @@
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusBottomStart="20dp"
             app:boxCornerRadiusTopEnd="20dp"
-            app:boxCornerRadiusTopStart="20dp"
-            app:hintTextColor="@color/black">
+            app:boxCornerRadiusTopStart="20dp">
 
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_search_concert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                />
 
         </com.google.android.material.textfield.TextInputLayout>
-        <ImageView
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_search"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/ic_baseline_search_24"
+            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            app:tint="#A1000000" />
+            android:minWidth="0dp"
+            android:padding="10dp"
+            app:icon="@drawable/ic_baseline_search_24"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            app:strokeColor="@color/transparent" />
     </RelativeLayout>
 
     <TextView
