--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,6 @@
 
     <color name="input_disabled">#1E0E0E0E</color>
 
-    <color name="transparant">#00FFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
     <color name="gray">#C1C1C1</color>
 </resources>
