--- a/app/src/main/res/layout/fragment_all_genres.xml
+++ b/app/src/main/res/layout/fragment_all_genres.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="@dimen/root_view_padding"
     android:orientation="vertical"
     tools:context=".view.main.fragment.home.AllGenresFragment">
@@ -16,14 +17,16 @@
             android:layout_height="wrap_content"
             android:text="All Concert in the City"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="sans-serif"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:text="View All"
-            android:textColor="@color/blue_soft" />
+            android:textColor="@color/blue_soft"
+            android:fontFamily="sans-serif"/>
 
     </RelativeLayout>
 
@@ -31,13 +34,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/progressbar"
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmer_view_container_all_genre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
+            android:layout_gravity="center"
+            app:layout_constraintVertical_bias="0.5"
+            app:shimmer_duration="1000"
+            app:shimmer_auto_start="false"
+            app:shimmer_base_color="#1B1A1A"
+            app:shimmer_colored="true">
 
+
+            <include layout="@layout/item_load_shimmer_all_genre"/>
+
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_all_concert"
             android:layout_width="match_parent"
