--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -15,7 +15,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="400dp"
             android:background="@drawable/gradient_bg"
             android:orientation="vertical">
 
@@ -241,8 +241,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="@dimen/root_view_padding"
                 android:layout_toEndOf="@id/iv_email"
-                android:text="Email"
-                android:fontFamily="sans-serif"/>
+                android:fontFamily="sans-serif"
+                android:text="Email" />
 
             <TextView
                 android:id="@+id/profile_email"
@@ -252,8 +252,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="@dimen/root_view_padding"
                 android:layout_toEndOf="@id/iv_email"
-                android:text="example@gmail.com"
-                android:fontFamily="sans-serif"/>
+                android:fontFamily="sans-serif"
+                android:text="example@gmail.com" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
