--- a/app/src/main/res/layout/fragment_all_genres.xml
+++ b/app/src/main/res/layout/fragment_all_genres.xml
@@ -15,10 +15,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
             android:text="All Concert in the City"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:fontFamily="sans-serif"/>
+            android:textColor="@color/black"/>
 
         <TextView
             android:layout_width="wrap_content"
