--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/root_view_padding"
     tools:context=".view.main.fragment.message.ChatActivity">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:subtitle="Sub"
@@ -15,8 +17,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/root_view_padding">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_user_name_receiver"
@@ -27,27 +28,44 @@
                 android:text="Profile"
                 android:textStyle="bold" />
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/iv_person_receiver"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/img_placeholder_man"/>
+
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_chat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="8dp"
+        android:layout_above="@id/et_send_message"
+        android:layout_marginBottom="8dp"/>
+
     <EditText
+        android:id="@+id/et_send_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="write message"
         android:layout_alignParentBottom="true"/>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_send_message"
         style="@style/Widget.Material3.Button.OutlinedButton.Icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:minWidth="0dp"
         android:padding="10dp"
         app:icon="@drawable/ic_baseline_send_24"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
         app:strokeColor="@color/transparent"
-        tools:ignore="RelativeOverlap"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"/>
+        tools:ignore="RelativeOverlap" />
 
 </RelativeLayout>
